--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.github.jsqlparser:jsqlparser:4.4'
 
     implementation 'com.squareup:javapoet:1.13.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     // Use the latest Groovy version for Spock testing
     testImplementation 'org.codehaus.groovy:groovy:3.0.9'
