Moving around lots of files

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,27 @@
-version=0.0.1
+
+# Release plugin values
+# Release Plugin Settings
+SONATYPE_HOST=S01
+
+RELEASE_SIGNING_ENABLED=true
+
+
+POM_ARTIFACT_ID=ezy-query
+VERSION_NAME=1.8.1
+
+POM_NAME=Ezy Query
+POM_DESCRIPTION=XXXX
+#POM_INCEPTION_YEAR=2020
+POM_URL=https://github.com/kayr/ezy-query/
+
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENSE_DIST=repo
+
+POM_SCM_URL=scm:git:https://github.com/kayr/ezy-query.git
+POM_SCM_CONNECTION=scm:git:https://github.com/kayr/ezy-query.git
+POM_SCM_DEV_CONNECTION=scm:git:https://github.com/kayr/ezy-query.git
+
+POM_DEVELOPER_ID=kayr
+POM_DEVELOPER_NAME=Ronald Kayondo
+POM_DEVELOPER_URL=https://github.com/kayr/
