--- a/ezy-query-core/build.gradle
+++ b/ezy-query-core/build.gradle
@@ -10,44 +10,16 @@ plugins {
     id 'ezy-query.java-conventions'
 }
 
-//sourceCompatibility = JavaVersion.VERSION_1_8
-//targetCompatibility = JavaVersion.VERSION_1_8
 
 ext {
     artifactId = 'ezy-query-core'
 }
 
 
-//dependencies {
-//
-//    implementation 'com.github.jsqlparser:jsqlparser:4.4'
-//
-//
-//    // Use the latest Groovy version for Spock testing
-//    testImplementation 'org.codehaus.groovy:groovy:3.0.9'
-//
-//    // Use the awesome Spock testing and specification framework even with Java
-//    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
-//    testImplementation 'junit:junit:4.13.2'
-//
-//    //lombok
-//    compileOnly 'org.projectlombok:lombok:1.18.22'
-//    annotationProcessor 'org.projectlombok:lombok:1.18.22'
-//
-//    testCompileOnly 'org.projectlombok:lombok:1.18.22'
-//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
-//
-//    testImplementation "org.testcontainers:testcontainers:1.17.3"
-//    testImplementation "org.testcontainers:mysql:1.17.3"
-//    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-//    testImplementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
-//    // https://mvnrepository.com/artifact/com.zaxxer/HikariCP
-//    testImplementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
-//
-//
-//}
-//
-//tasks.named('test') {
-//    // Use JUnit Platform for unit tests.
-//    useJUnitPlatform()
-//}
+dependencies {
+    //add h2 database for testing
+    testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
+    testImplementation 'io.github.kayr:fuzzy-csv:1.8.1-groovy3'
+
+}
+
