--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ POM_ARTIFACT_ID=ezy-query
 VERSION_NAME=0.0.1
 
 POM_NAME=Ezy Query
-POM_DESCRIPTION=XXXX
+POM_DESCRIPTION=Convert Your Sql Query To A Queryable Java API/Code...think of A Queryable View In Your Code Using Java
 #POM_INCEPTION_YEAR=2020
 POM_URL=https://github.com/kayr/ezy-query/
 
