--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ SONATYPE_HOST=S01
 RELEASE_SIGNING_ENABLED=true
 
 
-POM_ARTIFACT_ID=ezy-query
+#POM_ARTIFACT_ID=ezy-query
 VERSION_NAME=0.0.1
 
 POM_NAME=Ezy Query
