fix bug mapping result to pojos.. also add quotes to aliases.

--- a/itest/Makefile
+++ b/itest/Makefile
@@ -7,10 +7,10 @@ clean:
 publishLocal:
 	cd ../ && make publishLocal
 
-ezyBuild:
+generate:
 	../gradlew ezybuild
 
-test: clean ezyBuild
+test: clean generate
 	../gradlew test
 
 all: test
