make file changes

--- a/itest/Makefile
+++ b/itest/Makefile
@@ -1,16 +1,19 @@
 # Add phony targets to makefile
 .PHONY: $(shell grep -E '^[a-zA-Z_-]+:.*?$$' Makefile | cut -d: -f1)
 
-clean:
-	../gradlew clean
-
-publishLocal:
-	cd ../ && make publishLocal
-
 generate:
 	../gradlew ezybuild
 
-test: clean generate
+clean:
+	../gradlew clean
+
+test: generate
 	../gradlew test
+
+build: generate
+	../gradlew build
+
+publishLocal:
+	cd ../ && make publishLocal
 
 all: test
