--- a/ezy-query-codegen/build.gradle
+++ b/ezy-query-codegen/build.gradle
@@ -5,11 +5,8 @@ plugins {
 
 ext {
     POM_ARTIFACT_ID='ezy-query-codegen'
+    POM_NAME='Ezy Query Codegen'
 }
-
-
-
-
 
 dependencies {
     api project(':ezy-query-core')
