add build avoidance in the ezy build task

--- a/ezy-query-gradle-plugin/build.gradle
+++ b/ezy-query-gradle-plugin/build.gradle
@@ -16,8 +16,7 @@ gradlePlugin {
     }
 }
 
-
 dependencies {
-    implementation gradleApi()
+//    implementation gradleApi()
     implementation project(':ezy-query-codegen')
 }
