--- a/ezy-query-codegen/build.gradle
+++ b/ezy-query-codegen/build.gradle
@@ -11,5 +11,6 @@ ext {
 dependencies {
     api project(':ezy-query-core')
     implementation 'com.squareup:javapoet:1.13.0'
+    implementation 'com.github.jsqlparser:jsqlparser:4.8'
     compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
 }
