--- a/ezy-query-core/build.gradle
+++ b/ezy-query-core/build.gradle
@@ -19,8 +19,13 @@ ext {
 
 dependencies {
     //add h2 database for testing
+    compileOnly 'com.github.jsqlparser:jsqlparser:4.8'
+
+    testImplementation 'com.github.jsqlparser:jsqlparser:4.8'
     testImplementation group: 'com.h2database', name: 'h2', version: '2.2.220'
     testImplementation 'io.github.kayr:fuzzy-csv:1.9.1-groovy3'
+
+
 
 }
 
